New-Upload-1755854042013/objects/Permission_Set_admn__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Groups_Added_To__c</fullName>
        <label>Permission Set Groups Added To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile_admn__c</referenceTo>
        <relationshipLabel>Permission Sets</relationshipLabel>
        <relationshipName>Permission_Sets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Activation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session Activation Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Permission Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>API_Name__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>License__c</columns>
        <columns>Profile__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Permission Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>